--- a/todolist/Dockerfile
+++ b/todolist/Dockerfile
@@ -10,5 +10,5 @@ RUN mvn clean install
 
 EXPOSE 8080
 
-COPY --from=build /target/todo-1.0.0-SNAPSHOT.jar app.jar
+COPY --from=build /target/todolist-1.0.0-SNAPSHOT.jar app.jar
 ENTRYPOINT ["java","-jar","app.jar"]
